london departures working example

--- a/mvc-example.html
+++ b/mvc-example.html
@@ -20,7 +20,7 @@
 
 </template>
 <script>
-    function makeGetXHR(url: string, callback: (err, resp) => void) {
+    function makeGetXHR(url, callback) {
         const xhr = new XMLHttpRequest();
 
         xhr.open('GET', url, true);
@@ -29,9 +29,16 @@
         xhr.send();
     }
 
+    function createDiv(className, textContent) {
+        const element  = document.createElement('div');
+        element.classList.add(className);
+        element.textContent = textContent;
+        return element;
+    }
+
     const TRAINS_URL = 'https://transportapi.com/v3/uk/train/station/tiploc:watrloo/2018-10-21/09:05/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d&train_status=passenger';
 
-    const TRAIN_INFO_URL = '';
+    const TRAIN_INFO_URL = 'https://transportapi.com/v3/uk/train/service/train_uid:{{id}}/2018-10-21/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d';
 
 
 </script>
@@ -46,16 +53,17 @@
         controller: {},
     };
 
-    window.onload(() => app.controller.init());
+    window.onload = () => app.controller.init();
 
 
     app.controller.init = () => {
-
+        app.controller.loadTrains();
     };
 
     app.controller.loadTrains = () => {
         makeGetXHR(TRAINS_URL, (err, trains) => {
-            app.model.trains = trains || [];
+            console.log('loadTrains', trains);
+            app.model.trains = trains.departures.all || [];
             app.view.showTrainList();
         });
     };
@@ -63,8 +71,9 @@
     app.controller.loadTrainInfo = (id) => {
         const url = TRAIN_INFO_URL.replace('{{id}}', id);
         makeGetXHR(url, (err, trainInfo) => {
-            app.model.trains = trains || [];
+            app.model.currentTrain = trainInfo || [];
             app.view.showTrainInfo(trainInfo);
+            app.view.showTrainStops(trainInfo);
         });
     };
 
@@ -75,41 +84,43 @@
         const trainList = document.getElementById('trainList');
         trainList.innerHTML = '';
 
-        trains.forEach(train => app.vew.showTrain());
+        trains.forEach(train => app.view.showTrain(train));
     };
 
     app.view.showTrain = (train) => {
+        console.log('showTrain', train);
         const trainList = document.getElementById('trainList');
 
         const trainDiv = document.createElement('div');
         trainDiv.classList.add('train');
 
-        const trainDeparture = document.createElement('div');
-        trainDeparture.classList.add('train__departure');
-        trainDeparture.textContent = train.departure;
+        const trainOrigin = document.createElement('div');
+        trainOrigin.classList.add('train__origin');
+        trainOrigin.textContent = train.origin_name;
 
         const trainDest = document.createElement('div');
         trainDest.classList.add('train__destination');
-        trainDest.textContent = train.destination;
+        trainDest.textContent = train.destination_name;
 
         const trainDepartureTime = document.createElement('div');
         trainDepartureTime.classList.add('train__departure-time');
-        trainDepartureTime.textContent = train.departure;
+        trainDepartureTime.textContent = train.aimed_departure_time;
 
         const trainInfo = document.createElement('button');
         trainInfo.classList.add('train__info');
         trainInfo.textContent = 'Details';
 
-        trainInfo.dataset.trainId = train.id;
+        trainInfo.dataset.trainId = train.train_uid;
         trainInfo.addEventListener('click', (event) => {
             const trainId = event.target.dataset.trainId;
             app.controller.loadTrainInfo(trainId)
         });
 
 
-        trainDiv.appendChild(trainDeparture);
+        trainDiv.appendChild(trainOrigin);
         trainDiv.appendChild(trainDest);
         trainDiv.appendChild(trainDepartureTime);
+        trainDiv.appendChild(trainInfo);
 
         trainList.appendChild(trainDiv)
     };
@@ -117,17 +128,49 @@
     app.view.showTrainInfo = (trainInfo) => {
         const trainInfoDiv = document.getElementById('trainInfo');
 
-        const trainDeparture = document.createElement('div');
-        trainDeparture.classList.add('train-info__departure');
-        trainDeparture.textContent = `Departure: ${trainInfo.departure}`;
+        trainInfoDiv.innerHTML = '';
+
+        const trainOrigin = document.createElement('div');
+        trainOrigin.classList.add('train-info__origin');
+        trainOrigin.textContent = `Departure: ${trainInfo.origin_name}`;
 
         const trainDest = document.createElement('div');
         trainDest.classList.add('train-info__destination');
-        trainDest.textContent = `Destination: ${trainInfo.departure}`;
+        trainDest.textContent = `Destination: ${trainInfo.destination_name}`;
 
         const trainDepartureTime = document.createElement('div');
         trainDepartureTime.classList.add('trainInfo__departure-time');
-        trainDepartureTime.textContent = `Time: ${trainInfo.departure}`;
+        trainDepartureTime.textContent = `Time: ${trainInfo.aimed_departure_time}`;
+
+        const trainStops = document.createElement('div');
+        trainStops.classList.add('trainInfo__stops');
+
+        trainInfoDiv.appendChild(trainOrigin);
+        trainInfoDiv.appendChild(trainDest);
+        trainInfoDiv.appendChild(trainDepartureTime);
+        trainInfoDiv.appendChild(trainStops);
+    };
+
+    app.view.showTrainStops = (trainInfo) => {
+        console.log('showTrainStops', trainInfo);
+        trainInfo.stops.forEach(stop => app.view.showStopDetails(stop));
+    };
+
+    app.view.showStopDetails = (trainStop) => {
+        console.log('showStopDetails', trainStop);
+        const stopsDiv = document.getElementsByClassName('trainInfo__stops')[0];
+
+        const theStop = document.createElement('div');
+        theStop.classList.add('train-stop');
+
+        const time = createDiv('train-stop__time', `${trainStop.aimed_arrival_time} - ${trainStop.aimed_departure_time}`);
+        const name = createDiv('train-stop__name', `${trainStop.station_name}`);
+
+        stopsDiv.appendChild(theStop);
+
+        theStop.appendChild(time);
+        theStop.appendChild(name);
+
     }
 
 
