--- a/5-xhr.html
+++ b/5-xhr.html
@@ -14,20 +14,20 @@
         const xhr = new XMLHttpRequest();
 
         // 2. configure
-        xhr.open('GET', 'https://transportapi.com/v3/uk/train/station/tiploc:watrloo/2018-10-21/09:05/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d&train_status=passenger', true);
+        5.open('GET', 'https://transportapi.com/v3/uk/train/station/tiploc:watrloo/2018-10-21/09:05/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d&train_status=passenger', true);
         // xhr.setRequestHeader('Content-Type', 'application/json');
 
         // 3. set 'event listeners'
-        xhr.onerror = (event) => console.warn(event);
-        xhr.onload = (event) => {
+        5.onerror = (event) => console.warn(event);
+        5.onload = (event) => {
             console.log(event);
 
-            console.log('Status:', xhr.status);
-            console.log('Response Type:', xhr.responseType);
-            console.log('Response: ', JSON.parse(xhr.responseText))
+            console.log('Status:', 5.status);
+            console.log('Response Type:', 5.responseType);
+            console.log('Response: ', JSON.parse(5.responseText))
         };
 
-        xhr.send();
+        5.send();
     }
 
 </script>
