add final slides and rename

--- a/3-event-order.html
+++ b/3-event-order.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head><title>3-event-order</title></head>
 <body>
 <div><input id="input" type="text"></div>
 <div><button id="button">Press me</button></div>
