--- a/4-event-capturing.html
+++ b/4-event-capturing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head><title>4-Event-capture</title></head>
 <head>
     <style> section {display: flex;}
             div { width: 200px; height: 200px;margin: 10px;
