--- a/2-click-event.html
+++ b/2-click-event.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<head></head>
+<head><title>2-click-event</title></head>
 <body>
-<div style="height: 200px; background-color: fuchsia;"
+<div style="height: 120px; width: 120px; background-color: fuchsia;"
      onclick="console.log('inline listener1')"
      onclick="console.log('inline listener2')"></div>
 </body>
