--- a/5-xhr.html
+++ b/5-xhr.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trains departures 1</title>
+    <title>5-Trains departures 1</title>
 </head>
 <body>
     <h1>Train departures from London Waterloo</h1>
@@ -14,12 +14,12 @@
         const xhr = new XMLHttpRequest();
 
         // 2. configure
-        5.open('GET', 'https://transportapi.com/v3/uk/train/station/tiploc:watrloo/2018-10-21/09:05/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d&train_status=passenger', true);
+        xhr.open('GET', 'https://transportapi.com/v3/uk/train/station/tiploc:watrloo/2018-10-21/09:05/timetable.json?app_id=1a5b51f3&app_key=2650ae19107f191fb6f6856b40f72c1d&train_status=passenger', true);
         // xhr.setRequestHeader('Content-Type', 'application/json');
 
         // 3. set 'event listeners'
-        5.onerror = (event) => console.warn(event);
-        5.onload = (event) => {
+        xhr.onerror = (event) => console.warn(event);
+        xhr.onload = (event) => {
             console.log(event);
 
             console.log('Status:', 5.status);
@@ -27,7 +27,7 @@
             console.log('Response: ', JSON.parse(5.responseText))
         };
 
-        5.send();
+        xhr.send();
     }
 
 </script>
